envoy.yaml
admin:
  access_log_path: /tmp/admin_access.log
  address:
    socket_address:
      protocol: TCP
      address: 0.0.0.0
      port_value: 8010
static_resources:
  listeners:
  - name: listener_0
    address:
      socket_address:
        protocol: TCP
        address: 0.0.0.0
        port_value: 8001
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.config.filter.network.http_connection_manager.v2.HttpConnectionManager
          stat_prefix: envoy_http
          route_config:
            name: local_route
            virtual_hosts:
            - name: local_service
              domains: ["*"]
              routes:
              - match:
                  prefix: "/stats"
                route:
                  cluster: api-server
              - match:
                  safe_regex:
                    google_re2: {}
                    regex: "/v[23]/domains/([^/]+)/info"
                route:
                  cluster: api-server
          http_filters:
            - name: envoy.filters.http.ext_authz
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.http.ext_authz.v3.ExtAuthz
                grpc_service:
                  envoy_grpc:
                    cluster_name: ext-authz
                  # Default is 200ms; override if your server needs e.g. warmup time.
                  timeout: 0.5s
                include_peer_certificate: true
            - name: envoy.filters.http.router
  clusters:
  - name: api-server
    connect_timeout: 0.25s
    type: STRICT_DNS
    # Comment out the following line to test on v6 networks
    dns_lookup_family: V4_ONLY
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: api-server
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: api-server
                port_value: 8081
  - name: ext-authz
    # This timeout controls the initial TCP handshake timeout - not the timeout for the entire request.
    connect_timeout: 0.25s
    type: STRICT_DNS
    lb_policy: ROUND_ROBIN
    http2_protocol_options: {}
    load_assignment:
      cluster_name: ext-authz
      endpoints:
        - lb_endpoints:
            - endpoint:
                address:
                  socket_address:
                    address: authz-server
                    port_value: 4000
